--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ LICENSE.txt
 
 !/src/minecraft/icbm/
 !/src/common/icbm/
-!/src/minecraft/atomicscience/
+!/src/common/chb/
 !/src/common/atomicscience/
 !/resources/icbm/
 !info.txt
