--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ LICENSE.txt
 
 !/src/minecraft/icbm/
 !/src/common/icbm/
+!/src/common/dan200/
 !/src/common/chb/
 !/src/common/atomicscience/
 !/resources/icbm/
