Updated to Minecraft 1.4

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ LICENSE.txt
 !/src/common/icbm/
 !/src/common/dan200/
 !/src/common/chb/
+!/src/common/railcraft/
 !/src/common/atomicscience/
 !/resources/icbm/
 !info.txt
