--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,23 @@
-/bin/*
-/conf/*
-/docs/*
-/eclipse/*
-/forge/*
-/jars/*
-/lib/*
-/logs/*
-/modsrc/*
-/reobf/*
-/runtime/*
-/temp/*
 *.bat
 *.sh
-7za.exe
-CHANGELOG
+/*/
 LICENSE.txt
+CHANGELOG
 
-/src/common/universalelectricity/
+!/src/
 /src/minecraft/*
-/src/minecraft/universalelectricity/
-/src/minecraft_server/*
-/src/common/*
-/backup/
-/builds/
 
 !/src/minecraft/icbm/
-!/src/common/icbm/
-!/src/common/dan200/
-!/src/common/chb/
-!/src/common/ic2/
-!/src/common/buildcraft/
-!/src/common/railcraft/
-!/src/common/atomicscience/
+!/src/minecraft/dan200/
+!/src/minecraft/chb/
+!/src/minecraft/ic2/
+!/src/minecraft/buildcraft/
+!/src/minecraft/railcraft/
+!/src/minecraft/atomicscience/
+!/src/minecraft/universalelectricity/
 !/resources/icbm/
 !info.txt
 !mcmod.info
 !publish.bat
-!Include Resources.bat
+!include.bat
 !/README
