Added German language

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ CHANGELOG
 
 !/src/minecraft/icbm/
 !/src/minecraft/dan200/
-!/src/minecraft/chb/
+!/src/minecraft/mffs/
 !/src/minecraft/ic2/
 !/src/minecraft/buildcraft/
 !/src/minecraft/railcraft/
