--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Thumbs.db
 !/src/minecraft/icbm/
 !/src/minecraft/dan200/
 !/src/minecraft/mffs/
+!/src/minecraft/org/
 !/src/minecraft/ic2/
 !/src/minecraft/buildcraft/
 !/src/minecraft/railcraft/
