--- a/build.xml
+++ b/build.xml
@@ -71,26 +71,26 @@
 		<copy todir="JarFile1">
 			<fileset refid="icbmResources"/>
 			<fileset refid="commonSource"/>
-			<fileset dir="${dir.mcp}/reobf/minecraft/" excludes="**" includes="**/icbm/zhapin/" />
+			<fileset dir="${dir.mcp}/reobf/minecraft/" excludes="**" includes="icbm/zhapin/" />
 		</copy>
 	
 		<!-- ICBM Contraption -->
 		<copy todir="JarFile2">
 			<fileset refid="icbmResources"/>
 			<fileset refid="commonSource"/>
-			<fileset dir="${dir.mcp}/reobf/minecraft/" excludes="**" includes="**/icbm/wanyi/" />
+			<fileset dir="${dir.mcp}/reobf/minecraft/" excludes="**" includes="icbm/wanyi/" />
 		</copy>
 		
 		<!-- ICBM Sentry -->
 		<copy todir="JarFile3">
 			<fileset refid="icbmResources"/>
 			<fileset refid="commonSource"/>
-			<fileset dir="${dir.mcp}/reobf/minecraft/" excludes="**" includes="**/icbm/gangshao/" />
+			<fileset dir="${dir.mcp}/reobf/minecraft/" excludes="**" includes="icbm/gangshao/" />
 		</copy>
 		
 		<!-- ICBM API -->
 		<copy todir="APIContents">
-			<fileset dir="${dir.development}src/icbm/api" excludes=".git/**" />	
+			<fileset dir="${dir.development}src/" excludes="**" includes="icbm/api/"/>	
 		</copy>
 		
 		<!-- OUTPUT JAR AND ZIP FILES -->
