--- a/build.xml
+++ b/build.xml
@@ -15,12 +15,14 @@
 		</copy>
 
 		<copy todir="${dir.mcp}/src/minecraft">
-			
 			<fileset dir="${dir.development}src">
 				<exclude name=".git/**"/>
 				<exclude name="**/*.xml"/>
 			</fileset>
-			
+			<fileset dir="${dir.development}Modding-Library/">
+				<exclude name=".git/**"/>
+				<exclude name="**/*.xml"/>
+			</fileset>
 		</copy>
 		
 		<mkdir dir="JarFile1" />
