--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,10 @@
 				<exclude name=".git/**"/>
 				<exclude name="**/*.xml"/>
 			</fileset>
+			<fileset dir="${dir.development}Dark-Library/src/">
+				<exclude name=".git/**"/>
+				<exclude name="**/*.xml"/>
+			</fileset>
 		</copy>
 		
 		<mkdir dir="JarFile1" />
@@ -59,6 +63,7 @@
 		
 		<!-- ICBM common source code -->
 		<fileset id="commonSource" dir="${dir.mcp}/reobf/minecraft/">
+			<include name="**/icbm/api/**"/>
 			<include name="**/icbm/core/**"/>
 			<include name="**/universalelectricity/**"/>
 			<include name="**/atomicscience/**"/>
