--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,10 @@
 				<exclude name=".git/**"/>
 				<exclude name="**/*.xml"/>
 			</fileset>
+			<fileset dir="${dir.development}Basic-Components/src/">
+				<exclude name=".git/**"/>
+				<exclude name="**/*.xml"/>
+			</fileset>
 		</copy>
 		
 		<mkdir dir="JarFile1" />
