--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Basic-Components"]
 	path = Basic-Components
 	url = https://github.com/calclavia/Basic-Components
+[submodule "Dark-Library"]
+	path = Dark-Library
+	url = https://github.com/DarkGuardsman/Dark-Library
