--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
 				<exclude name=".git/**"/>
 				<exclude name="**/*.xml"/>
 			</fileset>
-			<fileset dir="${dir.development}Modding-Library/">
+			<fileset dir="${dir.development}Modding-Library/src/">
 				<exclude name=".git/**"/>
 				<exclude name="**/*.xml"/>
 			</fileset>
@@ -70,6 +70,12 @@
 				<exclude name="**/*.java"/>
 				<exclude name="**/*.xml"/>
 		</fileset>
+		
+		<fileset id="mlResources" dir="${dir.development}Modding-Library/resources/">
+				<exclude name=".git/**"/>
+				<exclude name="**/*.java"/>
+				<exclude name="**/*.xml"/>
+		</fileset>
 			
 		<!-- ICBM common source code -->
 		<fileset id="commonSource" dir="${dir.mcp}/reobf/minecraft/">
@@ -89,6 +95,7 @@
 		
 		<!-- ICBM Explosion -->
 		<copy todir="JarFile1">
+			<fileset refid="mlResources"/>
 			<fileset refid="bcResources"/>
 			<fileset refid="icbmResources"/>
 			<fileset refid="commonSource"/>
@@ -97,6 +104,7 @@
 	
 		<!-- ICBM Contraption -->
 		<copy todir="JarFile2">
+			<fileset refid="mlResources"/>
 			<fileset refid="bcResources"/>
 			<fileset refid="icbmResources"/>
 			<fileset refid="commonSource"/>
@@ -105,6 +113,7 @@
 		
 		<!-- ICBM Sentry -->
 		<copy todir="JarFile3">
+			<fileset refid="mlResources"/>
 			<fileset refid="bcResources"/>
 			<fileset refid="icbmResources"/>
 			<fileset refid="commonSource"/>
