Format and clean up

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Dark-Library"]
 	path = Dark-Library
-	url = git@github.com:DarkGuardsman/Dark-Library.git
+url=https://github.com/DarkGuardsman/Dark-Library
 [submodule "Modding-Library"]
 	path = Modding-Library
 	url = git@github.com:calclavia/Modding-Library.git
