--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 url=https://github.com/DarkGuardsman/Dark-Library
 [submodule "Modding-Library"]
 	path = Modding-Library
-	url = git@github.com:calclavia/Modding-Library.git
+url=git@bitbucket.org:calclavia/modding-library.git
 [submodule "Basic-Components"]
 	path = Basic-Components
 	url = git://github.com/calclavia/Basic-Components.git
