Fixed most texture issues

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 
 	<target name="build">
 		<copy todir="${dir.development}">
-			<fileset dir="../Minecraft Forge/" />
+			<fileset dir="../Minecraft Forge Latest/" />
 		</copy>
 
 		<copy todir="${dir.mcp}/src/minecraft">
