Fixed #82 - Cruise launcher not accepting batteries

--- a/build.xml
+++ b/build.xml
@@ -138,7 +138,8 @@
 		<zip destfile="output/${file.APIFile}">
 			<fileset dir="APIFile" />
 		</zip>
-		
+		<copy todir="output" file="build.properties" />
+
 		<!-- OUTPUT LATEST JAR AND ZIP FILES -->
 		<jar destfile="${file.explosion}">
 			<fileset dir="JarFile1" />
