Revert "Build update"
This reverts commit 1a09e911c3a03f2373d1cb6a708d5ae6efe6fde6.

--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,7 @@
 			<arg line="recompile.bat" />
 		</exec>
 		<exec dir="${dir.mcp}" executable="cmd" osfamily="windows">
-			<arg line="reobfuscate.bat" />
+			<arg line="reobfuscate_srg.bat" />
 		</exec>
 		
 		<exec dir="${dir.mcp}" executable="bash" osfamily="unix">
