--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modding-library"]
-	path = modding-library
-	url = https://bitbucket.org/calclavia/modding-library.git
+[submodule "Calclavia-Library"]
+	path = Calclavia-Library
+	url = git@bitbucket.org:calclavia/calclavia-library.git
