--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ buildProps.withReader {
 version = "${config.version.mod.major}.${config.version.mod.minor}.${config.version.mod.revis}"
 group = "icbm"
 archivesBaseName = "ICBM"
-sourceCompatability = 1.7
-targetCompatability = 1.7
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 minecraft {
     version = "${config.version.minecraft}-${config.version.forge}"
