--- a/build.gradle
+++ b/build.gradle
@@ -95,5 +95,27 @@ task apiZip(type: Zip) {
 artifacts {
     archives apiZip
 }
+
+import net.minecraftforge.gradle.tasks.dev.ChangelogTask
+import net.minecraftforge.gradle.common.Constants
+import net.minecraftforge.gradle.delayed.*
+
+task createChangelog(type: ChangelogTask) {
+        def jobName = "${System.getenv().JOB_NAME}"
+        def buildNumber = "${System.getenv().BUILD_NUMBER}"
+
+        setServerRoot(new DelayedString(project, 'http://ci.jenkins.minecraftforge.net/'))
+        setJobName(new DelayedString(project, jobName.toString()));
+    setAuthName(new DelayedString(project, 'console_script'));
+    setAuthPassword(new DelayedString(project, 'dc6d48ca20a474beeac280a9a16a926e'));
+    setTargetBuild({buildNumber.toString()});
+    setOutput(new DelayedFile(project, 'build/libs/' + jobName + '-changelog-' + "${project.version}" + '.txt'));
+}
+
  
-build.dependsOn "apiZip", "copyBuildXml"
+task copyBuilds(type: Copy) {
+    from '**/output/*'
+    into 'output'
+}
+
+build.dependsOn "apiZip", "copyBuildXml", "createChangelog", "apiZip"
